--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,8 @@
   "printWidth": 120,
   "tabWidth": 2,
   "semi": true,
-  "singleQuote": true
+  "singleQuote": true,
+  "arrowParens": "avoid",
+  "trailingComma": "none",
+  "jsxBracketSameLine": false
 }
