Fixed compiler warnings

--- a/modules/map/package.json
+++ b/modules/map/package.json
@@ -31,7 +31,9 @@
     "@idea-ionic/common": ">=0.0.11",
     "@ionic/angular": ">=5.0.0",
     "@ionic/storage": ">=2.2.0",
+    "@types/google__maps": "^0.5.14",
     "@types/googlemaps": "^3.43.0",
+    "@types/scriptjs": "0.0.2",
     "google": "^2.1.0",
     "idea-toolbox": ">=6.2.0",
     "rxjs": ">=6.5.5",
