--- a/modules/plans-subscription/package.json
+++ b/modules/plans-subscription/package.json
@@ -30,10 +30,11 @@
     "@angular/router": ">=11.0.0",
     "@capacitor/core": ">=2.4.5",
     "@idea-ionic/common": ">=0.0.11",
-    "@ionic/angular": ">=5.0.0",
-    "@ionic/storage": ">=2.2.0",
     "@ionic-native/core": ">=5.0.7",
     "@ionic-native/in-app-purchase-2": ">=5.30.0",
+    "@ionic/angular": ">=5.0.0",
+    "@ionic/storage": ">=2.2.0",
+    "@types/scriptjs": "0.0.2",
     "google": "^2.1.0",
     "idea-toolbox": ">=6.2.0",
     "rxjs": ">=6.5.5",
