--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "declarationMap": true,
     "inlineSources": true,
     "importHelpers": true,
-    "module": "commonjs",
+    "module": "es2020",
     "removeComments": true,
     "sourceMap": true,
     "target": "es6",
