--- a/package.json
+++ b/package.json
@@ -15,13 +15,20 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.5",
-    "@angular/cli": "~11.0.5",
+    "@angular-devkit/core": "^11.0.5",
+    "@angular-devkit/schematics": "^11.0.5",
+    "@angular-eslint/builder": "^1.0.0",
+    "@angular-eslint/schematics": "^1.0.0",
+    "@angular-eslint/template-parser": "^1.0.0",
+    "@angular/cli": "^11.0.5",
     "@angular/compiler-cli": "~11.0.5",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "eslint": "^7.6.0",
-    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^30.7.9",
+    "eslint-plugin-prefer-arrow": "^1.2.2",
     "ng-packagr": "^11.0.0",
     "prettier": "^2.2.1",
     "ts-node": "~8.3.0",
