--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/cli": "^11.0.5",
     "@angular/compiler-cli": "~11.0.5",
     "@types/node": "^12.11.1",
+    "@types/googlemaps": "^3.43.0",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "eslint": "^7.6.0",
