--- a/modules/map/tsconfig.lib.prod.json
+++ b/modules/map/tsconfig.lib.prod.json
@@ -1,7 +1,8 @@
 {
   "extends": "./tsconfig.lib.json",
   "compilerOptions": {
-    "declarationMap": false
+    "declarationMap": false,
+    "types": ["googlemaps"]
   },
   "angularCompilerOptions": {
     "enableIvy": false
