--- a/modules/speech-recognition/package.json
+++ b/modules/speech-recognition/package.json
@@ -17,6 +17,7 @@
     "@ionic/storage": ">=2.2.0",
     "@ionic-native/core": ">=5.0.7",
     "@ionic-native/speech-recognition": ">=5.29.0",
+    "cordova-plugin-speechrecognition": ">=1.2.0",
     "idea-toolbox": ">=6.3.0",
     "rxjs": ">=6.5.5",
     "zone.js": ">=0.10.3"
@@ -33,6 +34,7 @@
     "@ionic/storage": ">=2.2.0",
     "@ionic-native/core": ">=5.0.7",
     "@ionic-native/speech-recognition": ">=5.29.0",
+    "cordova-plugin-speechrecognition": ">=1.2.0",
     "idea-toolbox": ">=6.3.0",
     "rxjs": ">=6.5.5",
     "zone.js": ">=0.10.3"
