--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1100.1",
-    "@angular-devkit/build-angular": "~0.1100.5",
+    "@angular-devkit/build-angular": "^0.1102.12",
     "@angular-devkit/core": "^11.0.5",
     "@angular-devkit/schematics": "^11.0.5",
     "@angular-eslint/builder": "^1.0.0",
