--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -45,7 +45,7 @@ body:
     attributes:
       label: Example
       description: 'Example to reproduce the bug: step-by-step example to reproduce the bug; add screenshots, if applicable.'
-      placeholder: |
+      placeholder: >
         Example:
         1. Sign-in with the team XYZ and a non-admin user.
         2. Open the dasboard.
@@ -85,4 +85,4 @@ body:
       required: true
   - type: markdown
     attributes:
-      value: Thanks for taking the time to fill out this bug report!
+      value: ## Thanks for taking the time to fill out this bug report!
