fix(issue-template): bug report

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -85,4 +85,4 @@ body:
       required: true
   - type: markdown
     attributes:
-      value: ## Thanks for taking the time to fill out this bug report!
+      value: '## Thanks for taking the time to fill out this bug report!'
