--- a/modules/plans-subscription/tsconfig.lib.json
+++ b/modules/plans-subscription/tsconfig.lib.json
@@ -1,3 +1,8 @@
 {
-  "extends": "../../tsconfig.json"
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "paths": {
+      "@env": ["modules/plans-subscription/environment.ts"]
+    }
+  }
 }
