--- a/modules/agenda/package.json
+++ b/modules/agenda/package.json
@@ -15,7 +15,7 @@
     "@angular/router": ">=11.0.0",
     "@capacitor/core": ">=2.4.5",
     "@ionic/angular": ">=5.0.0",
-    "@ionic/storage": ">=2.2.0",
+    "@ionic/storage-angular": ">=3.0.6",
     "angular-calendar": ">=0.28.20",
     "date-fns": ">=2.16.1",
     "idea-toolbox": ">=6.5.7",
@@ -32,7 +32,7 @@
     "@capacitor/core": ">=2.4.5",
     "@idea-ionic/common": "latest",
     "@ionic/angular": ">=5.0.0",
-    "@ionic/storage": ">=2.2.0",
+    "@ionic/storage-angular": ">=3.0.6",
     "angular-calendar": ">=0.28.20",
     "date-fns": ">=2.16.1",
     "idea-toolbox": ">=6.5.7",
