--- a/modules/plans-subscription/package.json
+++ b/modules/plans-subscription/package.json
@@ -14,7 +14,7 @@
     "@angular/router": ">=11.0.0",
     "@capacitor/core": ">=2.4.5",
     "@ionic/angular": ">=5.0.0",
-    "@ionic/storage": ">=2.2.0",
+    "@ionic/storage-angular": ">=3.0.6",
     "@ionic-native/core": ">=5.0.7",
     "@ionic-native/in-app-purchase-2": ">=5.30.0",
     "idea-toolbox": ">=6.5.7",
@@ -32,7 +32,7 @@
     "@ionic-native/core": ">=5.0.7",
     "@ionic-native/in-app-purchase-2": ">=5.30.0",
     "@ionic/angular": ">=5.0.0",
-    "@ionic/storage": ">=2.2.0",
+    "@ionic/storage-angular": ">=3.0.6",
     "@types/scriptjs": "0.0.2",
     "idea-toolbox": ">=6.5.7",
     "rxjs": ">=6.5.5",
