--- a/modules/speech-recognition/package.json
+++ b/modules/speech-recognition/package.json
@@ -13,7 +13,7 @@
     "@angular/router": ">=11.0.0",
     "@capacitor/core": ">=2.4.5",
     "@ionic/angular": ">=5.0.0",
-    "@ionic/storage": ">=2.2.0",
+    "@ionic/storage-angular": ">=3.0.6",
     "@ionic-native/core": ">=5.0.7",
     "@ionic-native/speech-recognition": ">=5.29.0",
     "cordova-plugin-speechrecognition": ">=1.2.0",
@@ -30,7 +30,7 @@
     "@capacitor/core": ">=2.4.5",
     "@idea-ionic/common": "latest",
     "@ionic/angular": ">=5.0.0",
-    "@ionic/storage": ">=2.2.0",
+    "@ionic/storage-angular": ">=3.0.6",
     "@ionic-native/core": ">=5.0.7",
     "@ionic-native/speech-recognition": ">=5.29.0",
     "cordova-plugin-speechrecognition": ">=1.2.0",
