--- a/modules/teams/package.json
+++ b/modules/teams/package.json
@@ -13,7 +13,7 @@
     "@angular/router": ">=11.0.0",
     "@capacitor/core": ">=2.4.5",
     "@ionic/angular": ">=5.0.0",
-    "@ionic/storage": ">=2.2.0",
+    "@ionic/storage-angular": ">=3.0.6",
     "idea-toolbox": ">=6.5.7",
     "rxjs": ">=6.5.5",
     "zone.js": ">=0.10.3"
@@ -27,7 +27,7 @@
     "@capacitor/core": ">=2.4.5",
     "@idea-ionic/common": "latest",
     "@ionic/angular": ">=5.0.0",
-    "@ionic/storage": ">=2.2.0",
+    "@ionic/storage-angular": ">=3.0.6",
     "idea-toolbox": ">=6.5.7",
     "rxjs": ">=6.5.5",
     "zone.js": ">=0.10.3"
