--- a/modules/plans-subscription/package.json
+++ b/modules/plans-subscription/package.json
@@ -28,7 +28,7 @@
     "@angular/platform-browser": ">=11.0.0",
     "@angular/router": ">=11.0.0",
     "@capacitor/core": ">=2.4.5",
-    "@idea-ionic/common": "latest",
+    "@idea-ionic/common": ">=5.x.x",
     "@ionic-native/core": ">=5.0.7",
     "@ionic-native/in-app-purchase-2": ">=5.30.0",
     "@ionic/angular": ">=5.0.0",
