--- a/package.json
+++ b/package.json
@@ -8,32 +8,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~11.0.5",
-    "@angular/compiler": "~11.0.5",
-    "@angular/core": "~11.0.5",
-    "zone.js": "~0.10.3"
+    "@angular/common": "~13.1.0",
+    "@angular/compiler": "~13.1.0",
+    "@angular/core": "~13.1.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1100.1",
-    "@angular-devkit/build-angular": "^0.1102.12",
-    "@angular-devkit/core": "^11.0.5",
-    "@angular-devkit/schematics": "^11.0.5",
-    "@angular-eslint/builder": "^1.0.0",
-    "@angular-eslint/schematics": "^1.0.0",
-    "@angular-eslint/template-parser": "^1.0.0",
-    "@angular/cli": "^11.2.12",
-    "@angular/compiler-cli": "~11.0.5",
+    "@angular-devkit/architect": "^0.1301.2",
+    "@angular-devkit/build-angular": "~13.1.0",
+    "@angular-devkit/core": "~13.1.0",
+    "@angular-devkit/schematics": "~13.1.0",
+    "@angular-eslint/builder": "~13.0.1",
+    "@angular-eslint/schematics": "~13.0.1",
+    "@angular-eslint/template-parser": "~13.0.1",
+    "@angular/compiler": "~13.1.0",
+    "@angular/compiler-cli": "~13.1.0",
     "@types/googlemaps": "^3.43.0",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsdoc": "^30.7.9",
-    "eslint-plugin-prefer-arrow": "^1.2.2",
-    "ng-packagr": "^11.2.4",
-    "prettier": "^2.2.1",
-    "ts-node": "~8.3.0",
-    "typescript": "~4.0.2"
+    "@types/node": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
+    "eslint": "^7.32.0",
+    "ng-packagr": "^13.0.0",
+    "prettier": "^2.5.1",
+    "ts-node": "~10.1.0",
+    "typescript": "^4.4.4"
   }
 }
