--- a/modules/map/tsconfig.lib.prod.json
+++ b/modules/map/tsconfig.lib.prod.json
@@ -2,9 +2,9 @@
   "extends": "./tsconfig.lib.json",
   "compilerOptions": {
     "declarationMap": false,
-    "types": ["googlemaps"]
+    "types": ["google.maps"]
   },
   "angularCompilerOptions": {
-    "enableIvy": false
+    "compilationMode": "partial"
   }
 }
