--- a/modules/teams/tsconfig.lib.json
+++ b/modules/teams/tsconfig.lib.json
@@ -1,6 +1,11 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "outDir": "../../out-tsc/lib",
+    "declaration": true,
+    "declarationMap": true,
+    "inlineSources": true,
+    "types": [],
     "paths": {
       "@env": ["modules/teams/environment.ts"]
     }
