--- a/modules/agenda/package.json
+++ b/modules/agenda/package.json
@@ -13,7 +13,7 @@
     "@angular/forms": ">=13.1.0",
     "@angular/platform-browser": ">=13.1.0",
     "@angular/router": ">=13.1.0",
-    "@capacitor/core": ">=2.5.0",
+    "@capacitor/core": "^2.x.x",
     "@ionic/angular": ">=6.0.1",
     "@ionic/storage-angular": ">=3.0.6",
     "angular-calendar": ">=0.28.20",
@@ -29,7 +29,7 @@
     "@angular/forms": ">=13.1.0",
     "@angular/platform-browser": ">=13.1.0",
     "@angular/router": ">=13.1.0",
-    "@capacitor/core": ">=2.5.0",
+    "@capacitor/core": "^2.x.x",
     "@idea-ionic/common": ">=5.x.x",
     "@ionic/angular": ">=6.0.1",
     "@ionic/storage-angular": ">=3.0.6",
