--- a/modules/auth/package.json
+++ b/modules/auth/package.json
@@ -11,7 +11,7 @@
     "@angular/forms": ">=13.1.0",
     "@angular/platform-browser": ">=13.1.0",
     "@angular/router": ">=13.1.0",
-    "@capacitor/core": ">=2.5.0",
+    "@capacitor/core": "^2.x.x",
     "@ionic/angular": ">=6.0.1",
     "@ionic/storage-angular": ">=3.0.6",
     "amazon-cognito-identity-js": ">=5.2.4",
@@ -25,7 +25,7 @@
     "@angular/forms": ">=13.1.0",
     "@angular/platform-browser": ">=13.1.0",
     "@angular/router": ">=13.1.0",
-    "@capacitor/core": ">=2.5.0",
+    "@capacitor/core": "^2.x.x",
     "@idea-ionic/common": ">=5.x.x",
     "@ionic/angular": ">=6.0.1",
     "@ionic/storage-angular": ">=3.0.6",
