--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -12,7 +12,7 @@
     "@angular/forms": ">=13.1.0",
     "@angular/platform-browser": ">=13.1.0",
     "@angular/router": ">=13.1.0",
-    "@capacitor/core": ">=2.5.0",
+    "@capacitor/core": "^2.x.x",
     "@ionic/angular": ">=6.0.1",
     "@ionic/storage-angular": ">=3.0.6",
     "idea-toolbox": ">=6.5.7",
@@ -25,7 +25,7 @@
     "@angular/forms": ">=13.1.0",
     "@angular/platform-browser": ">=13.1.0",
     "@angular/router": ">=13.1.0",
-    "@capacitor/core": ">=2.5.0",
+    "@capacitor/core": "^2.x.x",
     "@ionic/angular": ">=6.0.1",
     "@ionic/storage-angular": ">=3.0.6",
     "idea-toolbox": ">=6.5.7",
