--- a/modules/map/package.json
+++ b/modules/map/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.11.1",
     "@googlemaps/markerclustererplus": "^1.0.3",
-    "@types/googlemaps": "^3.43.0",
     "tslib": "^2.0.0"
   },
   "peerDependencies": {
@@ -14,7 +13,7 @@
     "@angular/forms": ">=13.1.0",
     "@angular/platform-browser": ">=13.1.0",
     "@angular/router": ">=13.1.0",
-    "@capacitor/core": ">=2.5.0",
+    "@capacitor/core": "^2.x.x",
     "@ionic/angular": ">=6.0.1",
     "@ionic/storage-angular": ">=3.0.6",
     "idea-toolbox": ">=6.5.7",
@@ -27,10 +26,11 @@
     "@angular/forms": ">=13.1.0",
     "@angular/platform-browser": ">=13.1.0",
     "@angular/router": ">=13.1.0",
-    "@capacitor/core": ">=2.5.0",
+    "@capacitor/core": "^2.x.x",
     "@idea-ionic/common": ">=5.x.x",
     "@ionic/angular": ">=6.0.1",
     "@ionic/storage-angular": ">=3.0.6",
+    "@types/google.maps": "^3.47.2",
     "idea-toolbox": ">=6.5.7",
     "rxjs": ">=7.4.0",
     "zone.js": ">=0.11.4"
