--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "5.29.4",
   "scripts": {
     "ng": "ng",
+    "start": "ng serve",
     "build": "ng build",
-    "develop": "ng build --watch"
+    "watch": "ng build --watch --configuration development",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -23,7 +25,7 @@
     "@angular-eslint/template-parser": "~13.0.1",
     "@angular/compiler": "~13.1.0",
     "@angular/compiler-cli": "~13.1.0",
-    "@types/googlemaps": "^3.43.0",
+    "@types/google.maps": "^3.47.2",
     "@types/node": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
@@ -31,6 +33,6 @@
     "ng-packagr": "^13.0.0",
     "prettier": "^2.5.1",
     "ts-node": "~10.1.0",
-    "typescript": "^4.4.4"
+    "typescript": "4.4.4"
   }
 }
