chore: move to capacitor 3

--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -12,10 +12,14 @@
     "@angular/forms": ">=13.1.0",
     "@angular/platform-browser": ">=13.1.0",
     "@angular/router": ">=13.1.0",
-    "@capacitor/core": "^2.x.x",
+    "@capacitor/core": "^3.x.x",
+    "@capacitor/browser": "^1.x.x",
+    "@capacitor/network": "^1.x.x",
+    "@capacitor/push-notifications": "^1.x.x",
+    "@capacitor-community/keep-awake": "^2.x.x",
     "@ionic/angular": ">=6.0.1",
     "@ionic/storage-angular": ">=3.0.6",
-    "idea-toolbox": ">=6.5.9",
+    "idea-toolbox": ">=6.5.13",
     "rxjs": ">=7.4.0",
     "zone.js": ">=0.11.4"
   },
@@ -25,10 +29,14 @@
     "@angular/forms": ">=13.1.0",
     "@angular/platform-browser": ">=13.1.0",
     "@angular/router": ">=13.1.0",
-    "@capacitor/core": "^2.x.x",
+    "@capacitor/core": "^3.x.x",
+    "@capacitor/browser": "^1.x.x",
+    "@capacitor/network": "^1.x.x",
+    "@capacitor/push-notifications": "^1.x.x",
+    "@capacitor-community/keep-awake": "^2.x.x",
     "@ionic/angular": ">=6.0.1",
     "@ionic/storage-angular": ">=3.0.6",
-    "idea-toolbox": ">=6.5.9",
+    "idea-toolbox": ">=6.5.13",
     "rxjs": ">=7.4.0",
     "zone.js": ">=0.11.4"
   },
