--- a/modules/teams/package.json
+++ b/modules/teams/package.json
@@ -11,10 +11,12 @@
     "@angular/forms": ">=13.1.0",
     "@angular/platform-browser": ">=13.1.0",
     "@angular/router": ">=13.1.0",
-    "@capacitor/core": "^2.x.x",
+    "@capacitor/core": "^3.x.x",
+    "@capacitor/browser": "^1.x.x",
+    "@capacitor/camera": "^1.x.x",
     "@ionic/angular": ">=6.0.1",
     "@ionic/storage-angular": ">=3.0.6",
-    "idea-toolbox": ">=6.5.9",
+    "idea-toolbox": ">=6.5.13",
     "rxjs": ">=7.4.0",
     "zone.js": ">=0.11.4"
   },
@@ -24,11 +26,13 @@
     "@angular/forms": ">=13.1.0",
     "@angular/platform-browser": ">=13.1.0",
     "@angular/router": ">=13.1.0",
-    "@capacitor/core": "^2.x.x",
+    "@capacitor/core": "^3.x.x",
+    "@capacitor/browser": "^1.x.x",
+    "@capacitor/camera": "^1.x.x",
     "@idea-ionic/common": ">=6.x.x",
     "@ionic/angular": ">=6.0.1",
     "@ionic/storage-angular": ">=3.0.6",
-    "idea-toolbox": ">=6.5.9",
+    "idea-toolbox": ">=6.5.13",
     "rxjs": ">=7.4.0",
     "zone.js": ">=0.11.4"
   },
