--- a/modules/agenda/package.json
+++ b/modules/agenda/package.json
@@ -13,12 +13,13 @@
     "@angular/forms": ">=13.1.0",
     "@angular/platform-browser": ">=13.1.0",
     "@angular/router": ">=13.1.0",
-    "@capacitor/core": "^2.x.x",
+    "@capacitor/core": "^3.x.x",
+    "@capacitor/browser": "^1.x.x",
     "@ionic/angular": ">=6.0.1",
     "@ionic/storage-angular": ">=3.0.6",
     "angular-calendar": ">=0.28.20",
     "date-fns": ">=2.16.1",
-    "idea-toolbox": ">=6.5.9",
+    "idea-toolbox": ">=6.5.13",
     "rxjs": ">=7.4.0",
     "zone.js": ">=0.11.4"
   },
@@ -29,13 +30,14 @@
     "@angular/forms": ">=13.1.0",
     "@angular/platform-browser": ">=13.1.0",
     "@angular/router": ">=13.1.0",
-    "@capacitor/core": "^2.x.x",
+    "@capacitor/core": "^3.x.x",
+    "@capacitor/browser": "^1.x.x",
     "@idea-ionic/common": ">=6.x.x",
     "@ionic/angular": ">=6.0.1",
     "@ionic/storage-angular": ">=3.0.6",
     "angular-calendar": ">=0.28.20",
     "date-fns": ">=2.16.1",
-    "idea-toolbox": ">=6.5.9",
+    "idea-toolbox": ">=6.5.13",
     "rxjs": ">=7.4.0",
     "zone.js": ">=0.11.4"
   },
