--- a/modules/auth/package.json
+++ b/modules/auth/package.json
@@ -11,11 +11,12 @@
     "@angular/forms": ">=13.1.0",
     "@angular/platform-browser": ">=13.1.0",
     "@angular/router": ">=13.1.0",
-    "@capacitor/core": "^2.x.x",
+    "@capacitor/core": "^3.x.x",
+    "@capacitor/browser": "^1.x.x",
     "@ionic/angular": ">=6.0.1",
     "@ionic/storage-angular": ">=3.0.6",
     "amazon-cognito-identity-js": ">=5.2.4",
-    "idea-toolbox": ">=6.5.9",
+    "idea-toolbox": ">=6.5.13",
     "rxjs": ">=7.4.0",
     "zone.js": ">=0.11.4"
   },
@@ -25,12 +26,13 @@
     "@angular/forms": ">=13.1.0",
     "@angular/platform-browser": ">=13.1.0",
     "@angular/router": ">=13.1.0",
-    "@capacitor/core": "^2.x.x",
+    "@capacitor/core": "^3.x.x",
+    "@capacitor/browser": "^1.x.x",
     "@idea-ionic/common": ">=6.x.x",
     "@ionic/angular": ">=6.0.1",
     "@ionic/storage-angular": ">=3.0.6",
     "amazon-cognito-identity-js": ">=4.5.6",
-    "idea-toolbox": ">=6.5.9",
+    "idea-toolbox": ">=6.5.13",
     "rxjs": ">=7.4.0",
     "zone.js": ">=0.11.4"
   },
