--- a/modules/map/package.json
+++ b/modules/map/package.json
@@ -13,10 +13,12 @@
     "@angular/forms": ">=13.1.0",
     "@angular/platform-browser": ">=13.1.0",
     "@angular/router": ">=13.1.0",
-    "@capacitor/core": "^2.x.x",
+    "@capacitor/core": "^3.x.x",
+    "@capacitor/geolocation": "^1.x.x",
+    "@capacitor/network": "^1.x.x",
     "@ionic/angular": ">=6.0.1",
     "@ionic/storage-angular": ">=3.0.6",
-    "idea-toolbox": ">=6.5.9",
+    "idea-toolbox": ">=6.5.13",
     "rxjs": ">=7.4.0",
     "zone.js": ">=0.11.4"
   },
@@ -26,12 +28,14 @@
     "@angular/forms": ">=13.1.0",
     "@angular/platform-browser": ">=13.1.0",
     "@angular/router": ">=13.1.0",
-    "@capacitor/core": "^2.x.x",
+    "@capacitor/core": "^3.x.x",
+    "@capacitor/geolocation": "^1.x.x",
+    "@capacitor/network": "^1.x.x",
     "@idea-ionic/common": ">=6.x.x",
     "@ionic/angular": ">=6.0.1",
     "@ionic/storage-angular": ">=3.0.6",
     "@types/google.maps": "^3.47.2",
-    "idea-toolbox": ">=6.5.9",
+    "idea-toolbox": ">=6.5.13",
     "rxjs": ">=7.4.0",
     "zone.js": ">=0.11.4"
   },
