--- a/modules/agenda/package.json
+++ b/modules/agenda/package.json
@@ -3,8 +3,8 @@
   "version": "6.3.0",
   "description": "IDEA Ionic agenda (calendar)",
   "dependencies": {
-    "tslib": "^2.0.0",
-    "color-parse": "^1.4.2"
+    "color-parse": "^1.4.2",
+    "tslib": "^2.0.0"
   },
   "peerDependencies": {
     "@angular/animations": ">=13.1.0",
@@ -13,8 +13,8 @@
     "@angular/forms": ">=13.1.0",
     "@angular/platform-browser": ">=13.1.0",
     "@angular/router": ">=13.1.0",
-    "@capacitor/core": "^3.x.x",
     "@capacitor/browser": "^1.x.x",
+    "@capacitor/core": "^3.x.x",
     "@ionic/angular": ">=6.0.1",
     "@ionic/storage-angular": ">=3.0.6",
     "angular-calendar": ">=0.28.20",
@@ -30,9 +30,9 @@
     "@angular/forms": ">=13.1.0",
     "@angular/platform-browser": ">=13.1.0",
     "@angular/router": ">=13.1.0",
-    "@capacitor/core": "^3.x.x",
     "@capacitor/browser": "^1.x.x",
-    "@idea-ionic/common": ">=6.x.x",
+    "@capacitor/core": "^3.x.x",
+    "@idea-ionic/common": "^6.3.0",
     "@ionic/angular": ">=6.0.1",
     "@ionic/storage-angular": ">=3.0.6",
     "angular-calendar": ">=0.28.20",
