--- a/package.json
+++ b/package.json
@@ -10,21 +10,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~13.1.0",
-    "@angular/compiler": "~13.1.0",
-    "@angular/core": "~13.1.0",
+    "@angular/common": "^13.3.11",
+    "@angular/core": "^13.3.11",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1301.2",
+    "@angular-devkit/architect": "^0.1401.3",
     "@angular-devkit/build-angular": "~13.3.9",
-    "@angular-devkit/core": "~13.1.0",
-    "@angular-devkit/schematics": "~13.1.0",
-    "@angular-eslint/builder": "~13.0.1",
-    "@angular-eslint/schematics": "~13.0.1",
-    "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/compiler": "~13.1.0",
-    "@angular/compiler-cli": "~13.1.0",
+    "@angular-devkit/core": "^13.3.9",
+    "@angular-devkit/schematics": "^13.3.9",
+    "@angular-eslint/builder": "^13.5.0",
+    "@angular-eslint/schematics": "^13.5.0",
+    "@angular-eslint/template-parser": "^13.5.0",
+    "@angular/compiler": "^13.3.11",
+    "@angular/compiler-cli": "^13.3.11",
     "@types/google.maps": "^3.47.2",
     "@types/node": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
