--- a/modules/agenda/package.json
+++ b/modules/agenda/package.json
@@ -4,42 +4,42 @@
   "description": "IDEA Ionic agenda (calendar)",
   "dependencies": {
     "color-parse": "^1.4.2",
-    "tslib": "^2.0.0"
+    "tslib": "^2.4.1"
   },
   "peerDependencies": {
-    "@angular/animations": ">=13.1.0",
-    "@angular/common": ">=13.1.0",
-    "@angular/core": ">=13.1.0",
-    "@angular/forms": ">=13.1.0",
-    "@angular/platform-browser": ">=13.1.0",
-    "@angular/router": ">=13.1.0",
-    "@capacitor/browser": "^1.x.x",
-    "@capacitor/core": "^3.x.x",
-    "@ionic/angular": ">=6.0.1",
+    "@angular/animations": ">=15.0.4",
+    "@angular/common": ">=15.0.4",
+    "@angular/core": ">=15.0.4",
+    "@angular/forms": ">=15.0.4",
+    "@angular/platform-browser": ">=15.0.4",
+    "@angular/router": ">=15.0.4",
+    "@capacitor/browser": "^4.x.x",
+    "@capacitor/core": "^4.x.x",
+    "@ionic/angular": ">=6.4.1",
     "@ionic/storage-angular": ">=3.0.6",
-    "angular-calendar": ">=0.28.20",
-    "date-fns": ">=2.16.1",
-    "idea-toolbox": ">=6.6.2",
-    "rxjs": ">=7.4.0",
-    "zone.js": ">=0.11.4"
+    "angular-calendar": ">=0.29.0",
+    "date-fns": ">=2.29.3",
+    "idea-toolbox": ">=6.6.x",
+    "rxjs": ">=7.8.0",
+    "zone.js": ">=0.12.0"
   },
   "devDependencies": {
-    "@angular/animations": ">=13.1.0",
-    "@angular/common": ">=13.1.0",
-    "@angular/core": ">=13.1.0",
-    "@angular/forms": ">=13.1.0",
-    "@angular/platform-browser": ">=13.1.0",
-    "@angular/router": ">=13.1.0",
-    "@capacitor/browser": "^1.x.x",
-    "@capacitor/core": "^3.x.x",
+    "@angular/animations": ">=15.0.4",
+    "@angular/common": ">=15.0.4",
+    "@angular/core": ">=15.0.4",
+    "@angular/forms": ">=15.0.4",
+    "@angular/platform-browser": ">=15.0.4",
+    "@angular/router": ">=15.0.4",
+    "@capacitor/browser": "^4.x.x",
+    "@capacitor/core": "^4.x.x",
     "@idea-ionic/common": "^6.x.x",
-    "@ionic/angular": ">=6.0.1",
+    "@ionic/angular": ">=6.4.1",
     "@ionic/storage-angular": ">=3.0.6",
-    "angular-calendar": ">=0.28.20",
-    "date-fns": ">=2.16.1",
-    "idea-toolbox": ">=6.6.2",
-    "rxjs": ">=7.4.0",
-    "zone.js": ">=0.11.4"
+    "angular-calendar": ">=0.29.0",
+    "date-fns": ">=2.29.3",
+    "idea-toolbox": ">=6.6.x",
+    "rxjs": ">=7.8.0",
+    "zone.js": ">=0.12.0"
   },
   "repository": {
     "type": "git",
