--- a/modules/auth0/package.json
+++ b/modules/auth0/package.json
@@ -6,33 +6,33 @@
     "tslib": ">=2.0.0"
   },
   "peerDependencies": {
-    "@angular/common": ">=13.1.0",
-    "@angular/core": ">=13.1.0",
-    "@angular/forms": ">=13.1.0",
-    "@angular/platform-browser": ">=13.1.0",
-    "@angular/router": ">=13.1.0",
+    "@angular/common": ">=15.0.4",
+    "@angular/core": ">=15.0.4",
+    "@angular/forms": ">=15.0.4",
+    "@angular/platform-browser": ">=15.0.4",
+    "@angular/router": ">=15.0.4",
     "@auth0/auth0-angular": "^1.10.x",
-    "@capacitor/core": "^3.x.x",
-    "@capacitor/browser": "^1.x.x",
-    "@ionic/angular": ">=6.0.1",
-    "idea-toolbox": ">=6.6.2",
-    "rxjs": ">=7.4.0",
-    "zone.js": ">=0.11.4"
+    "@capacitor/browser": "^4.x.x",
+    "@capacitor/core": "^4.x.x",
+    "@ionic/angular": ">=6.4.1",
+    "idea-toolbox": ">=6.6.x",
+    "rxjs": ">=7.8.0",
+    "zone.js": ">=0.12.0"
   },
   "devDependencies": {
-    "@angular/common": ">=13.1.0",
-    "@angular/core": ">=13.1.0",
-    "@angular/forms": ">=13.1.0",
-    "@angular/platform-browser": ">=13.1.0",
-    "@angular/router": ">=13.1.0",
-    "@auth0/auth0-angular": "^1.10.x",
-    "@capacitor/core": "^3.x.x",
-    "@capacitor/browser": "^1.x.x",
+    "@angular/common": ">=15.0.4",
+    "@angular/core": ">=15.0.4",
+    "@angular/forms": ">=15.0.4",
+    "@angular/platform-browser": ">=15.0.4",
+    "@angular/router": ">=15.0.4",
+    "@auth0/auth0-angular": "^1.11.1",
+    "@capacitor/browser": "^4.x.x",
+    "@capacitor/core": "^4.x.x",
     "@idea-ionic/common": "^6.x.x",
-    "@ionic/angular": ">=6.0.1",
-    "idea-toolbox": ">=6.6.2",
-    "rxjs": ">=7.4.0",
-    "zone.js": ">=0.11.4"
+    "@ionic/angular": ">=6.4.1",
+    "idea-toolbox": ">=6.6.x",
+    "rxjs": ">=7.8.0",
+    "zone.js": ">=0.12.0"
   },
   "repository": {
     "type": "git",
