--- a/modules/barcode/package.json
+++ b/modules/barcode/package.json
@@ -3,24 +3,25 @@
   "version": "6.6.3",
   "description": "IDEA Ionic barcode components",
   "dependencies": {
-    "tslib": ">=2.0.0"
+    "tslib": "^2.4.1"
   },
   "peerDependencies": {
-    "@angular/common": ">=13.1.0",
-    "@angular/core": ">=13.1.0",
-    "@angular/forms": ">=13.1.0",
-    "@capacitor-community/barcode-scanner": "^2.1.1",
-    "@ionic/angular": ">=6.0.1",
-    "rxjs": ">=7.4.0",
-    "zone.js": ">=0.11.4"
+    "@angular/common": ">=15.0.4",
+    "@angular/core": ">=15.0.4",
+    "@angular/forms": ">=15.0.4",
+    "@capacitor-community/barcode-scanner": "^3.0.1",
+    "@ionic/angular": ">=6.4.1",
+    "rxjs": ">=7.8.0",
+    "zone.js": ">=0.12.0"
   },
   "devDependencies": {
-    "@angular/common": ">=13.1.0",
-    "@angular/core": ">=13.1.0",
-    "@angular/forms": ">=13.1.0",
-    "@ionic/angular": ">=6.0.1",
-    "rxjs": ">=7.4.0",
-    "zone.js": ">=0.11.4"
+    "@angular/common": ">=15.0.4",
+    "@angular/core": ">=15.0.4",
+    "@angular/forms": ">=15.0.4",
+    "@capacitor-community/barcode-scanner": "^3.0.1",
+    "@ionic/angular": ">=6.4.1",
+    "rxjs": ">=7.8.0",
+    "zone.js": ">=0.12.0"
   },
   "repository": {
     "type": "git",
