--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -1,44 +1,43 @@
 {
   "name": "@idea-ionic/common",
-  "version": "6.6.3",
+  "version": "6.6.4",
   "description": "IDEA Ionic common components",
   "dependencies": {
     "signature_pad": ">=3.0.0-beta.4",
-    "tslib": ">=2.0.0"
+    "tslib": "^2.4.1"
   },
   "peerDependencies": {
-    "@angular/common": ">=13.1.0",
-    "@angular/core": ">=13.1.0",
-    "@angular/forms": ">=13.1.0",
-    "@angular/platform-browser": ">=13.1.0",
-    "@angular/router": ">=13.1.0",
-    "@capacitor/core": "^3.x.x",
-    "@capacitor/browser": "^1.x.x",
-    "@capacitor/network": "^1.x.x",
-    "@capacitor/push-notifications": "^1.x.x",
-    "@capacitor-community/keep-awake": "^2.x.x",
-    "@ionic/angular": ">=6.0.1",
+    "@angular/animations": ">=15.0.4",
+    "@angular/common": ">=15.0.4",
+    "@angular/core": ">=15.0.4",
+    "@angular/forms": ">=15.0.4",
+    "@angular/platform-browser": ">=15.0.4",
+    "@angular/router": ">=15.0.4",
+    "@capacitor/browser": "^4.x.x",
+    "@capacitor/core": "^4.x.x",
+    "@capacitor/network": "^4.x.x",
+    "@capacitor/push-notifications": "^4.x.x",
+    "@ionic/angular": ">=6.4.1",
     "@ionic/storage-angular": ">=3.0.6",
-    "idea-toolbox": ">=6.6.2",
-    "rxjs": ">=7.4.0",
-    "zone.js": ">=0.11.4"
+    "idea-toolbox": ">=6.6.x",
+    "rxjs": ">=7.8.0",
+    "zone.js": ">=0.12.0"
   },
   "devDependencies": {
-    "@angular/common": ">=13.1.0",
-    "@angular/core": ">=13.1.0",
-    "@angular/forms": ">=13.1.0",
-    "@angular/platform-browser": ">=13.1.0",
-    "@angular/router": ">=13.1.0",
-    "@capacitor/core": "^3.x.x",
-    "@capacitor/browser": "^1.x.x",
-    "@capacitor/network": "^1.x.x",
-    "@capacitor/push-notifications": "^1.x.x",
-    "@capacitor-community/keep-awake": "^2.x.x",
-    "@ionic/angular": ">=6.0.1",
+    "@angular/animations": ">=15.0.4",
+    "@angular/common": ">=15.0.4",
+    "@angular/core": ">=15.0.4",
+    "@angular/forms": ">=15.0.4",
+    "@angular/platform-browser": ">=15.0.4",
+    "@angular/router": ">=15.0.4",
+    "@capacitor/browser": "^4.x.x",
+    "@capacitor/network": "^4.x.x",
+    "@capacitor/push-notifications": "^4.x.x",
+    "@ionic/angular": ">=6.4.1",
     "@ionic/storage-angular": ">=3.0.6",
-    "idea-toolbox": ">=6.6.2",
-    "rxjs": ">=7.4.0",
-    "zone.js": ">=0.11.4"
+    "idea-toolbox": ">=6.6.x",
+    "rxjs": ">=7.8.0",
+    "zone.js": ">=0.12.0"
   },
   "repository": {
     "type": "git",
