--- a/modules/map/package.json
+++ b/modules/map/package.json
@@ -3,41 +3,43 @@
   "version": "6.6.3",
   "description": "IDEA Ionic map component",
   "dependencies": {
-    "@googlemaps/js-api-loader": "^1.11.1",
-    "@googlemaps/markerclustererplus": "^1.0.3",
-    "tslib": "^2.0.0"
+    "@googlemaps/js-api-loader": "^1.15.1",
+    "@googlemaps/markerclustererplus": "^1.2.10",
+    "tslib": "^2.4.1"
   },
   "peerDependencies": {
-    "@angular/common": ">=13.1.0",
-    "@angular/core": ">=13.1.0",
-    "@angular/forms": ">=13.1.0",
-    "@angular/platform-browser": ">=13.1.0",
-    "@angular/router": ">=13.1.0",
-    "@capacitor/core": "^3.x.x",
-    "@capacitor/geolocation": "^1.x.x",
-    "@capacitor/network": "^1.x.x",
-    "@ionic/angular": ">=6.0.1",
+    "@angular/common": ">=15.0.4",
+    "@angular/core": ">=15.0.4",
+    "@angular/forms": ">=15.0.4",
+    "@angular/platform-browser": ">=15.0.4",
+    "@angular/router": ">=15.0.4",
+    "@capacitor/browser": "^4.x.x",
+    "@capacitor/core": "^4.x.x",
+    "@capacitor/geolocation": "^4.x.x",
+    "@capacitor/network": "^4.x.x",
+    "@ionic/angular": ">=6.4.1",
     "@ionic/storage-angular": ">=3.0.6",
-    "idea-toolbox": ">=6.6.2",
-    "rxjs": ">=7.4.0",
-    "zone.js": ">=0.11.4"
+    "idea-toolbox": ">=6.6.x",
+    "rxjs": ">=7.8.0",
+    "zone.js": ">=0.12.0"
   },
   "devDependencies": {
-    "@angular/common": ">=13.1.0",
-    "@angular/core": ">=13.1.0",
-    "@angular/forms": ">=13.1.0",
-    "@angular/platform-browser": ">=13.1.0",
-    "@angular/router": ">=13.1.0",
-    "@capacitor/core": "^3.x.x",
-    "@capacitor/geolocation": "^1.x.x",
-    "@capacitor/network": "^1.x.x",
+    "@angular/common": ">=15.0.4",
+    "@angular/core": ">=15.0.4",
+    "@angular/forms": ">=15.0.4",
+    "@angular/platform-browser": ">=15.0.4",
+    "@angular/router": ">=15.0.4",
+    "@capacitor/browser": "^4.x.x",
+    "@capacitor/core": "^4.x.x",
+    "@capacitor/geolocation": "^4.x.x",
+    "@capacitor/network": "^4.x.x",
     "@idea-ionic/common": "^6.x.x",
-    "@ionic/angular": ">=6.0.1",
+    "@ionic/angular": ">=6.4.1",
     "@ionic/storage-angular": ">=3.0.6",
-    "@types/google.maps": "^3.47.2",
-    "idea-toolbox": ">=6.6.2",
-    "rxjs": ">=7.4.0",
-    "zone.js": ">=0.11.4"
+    "@types/google.maps": "^3.51.0",
+    "idea-toolbox": ">=6.6.x",
+    "rxjs": ">=7.8.0",
+    "zone.js": ">=0.12.0"
   },
   "repository": {
     "type": "git",
