--- a/modules/teams/package.json
+++ b/modules/teams/package.json
@@ -3,38 +3,39 @@
   "version": "6.6.3",
   "description": "IDEA Ionic teams components",
   "dependencies": {
-    "tslib": ">=2.0.0"
+    "tslib": "^2.4.1"
   },
   "peerDependencies": {
-    "@angular/common": ">=13.1.0",
-    "@angular/core": ">=13.1.0",
-    "@angular/forms": ">=13.1.0",
-    "@angular/platform-browser": ">=13.1.0",
-    "@angular/router": ">=13.1.0",
-    "@capacitor/core": "^3.x.x",
-    "@capacitor/browser": "^1.x.x",
-    "@capacitor/camera": "^1.x.x",
-    "@ionic/angular": ">=6.0.1",
+    "@angular/common": ">=15.0.4",
+    "@angular/core": ">=15.0.4",
+    "@angular/forms": ">=15.0.4",
+    "@angular/platform-browser": ">=15.0.4",
+    "@angular/router": ">=15.0.4",
+    "@capacitor/browser": "^4.x.x",
+    "@capacitor/core": "^4.x.x",
+    "@capacitor/camera": "^4.x.x",
+    "@ionic/angular": ">=6.4.1",
     "@ionic/storage-angular": ">=3.0.6",
-    "idea-toolbox": ">=6.6.2",
-    "rxjs": ">=7.4.0",
-    "zone.js": ">=0.11.4"
+    "idea-toolbox": ">=6.6.x",
+    "rxjs": ">=7.8.0",
+    "zone.js": ">=0.12.0"
   },
   "devDependencies": {
-    "@angular/common": ">=13.1.0",
-    "@angular/core": ">=13.1.0",
-    "@angular/forms": ">=13.1.0",
-    "@angular/platform-browser": ">=13.1.0",
-    "@angular/router": ">=13.1.0",
-    "@capacitor/core": "^3.x.x",
-    "@capacitor/browser": "^1.x.x",
-    "@capacitor/camera": "^1.x.x",
+    "@angular/animations": ">=15.0.4",
+    "@angular/common": ">=15.0.4",
+    "@angular/core": ">=15.0.4",
+    "@angular/forms": ">=15.0.4",
+    "@angular/platform-browser": ">=15.0.4",
+    "@angular/router": ">=15.0.4",
+    "@capacitor/browser": "^4.x.x",
+    "@capacitor/core": "^4.x.x",
+    "@capacitor/camera": "^4.x.x",
     "@idea-ionic/common": "^6.x.x",
-    "@ionic/angular": ">=6.0.1",
+    "@ionic/angular": ">=6.4.1",
     "@ionic/storage-angular": ">=3.0.6",
-    "idea-toolbox": ">=6.6.2",
-    "rxjs": ">=7.4.0",
-    "zone.js": ">=0.11.4"
+    "idea-toolbox": ">=6.6.x",
+    "rxjs": ">=7.8.0",
+    "zone.js": ">=0.12.0"
   },
   "repository": {
     "type": "git",
