--- a/package.json
+++ b/package.json
@@ -10,28 +10,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^13.3.11",
-    "@angular/core": "^13.3.11",
-    "zone.js": "~0.11.4"
+    "@angular/common": "^15.0.4",
+    "@angular/core": "^15.0.4",
+    "zone.js": "^0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1401.3",
-    "@angular-devkit/build-angular": "~13.3.9",
-    "@angular-devkit/core": "^13.3.9",
-    "@angular-devkit/schematics": "^13.3.9",
-    "@angular-eslint/builder": "^13.5.0",
-    "@angular-eslint/schematics": "^13.5.0",
-    "@angular-eslint/template-parser": "^13.5.0",
-    "@angular/compiler": "^13.3.11",
-    "@angular/compiler-cli": "^13.3.11",
-    "@types/google.maps": "^3.47.2",
-    "@types/node": "^17.0.8",
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
-    "eslint": "^7.32.0",
-    "ng-packagr": "^13.0.0",
-    "prettier": "^2.5.1",
-    "ts-node": "~10.1.0",
-    "typescript": "4.4.4"
+    "@angular-devkit/architect": "^0.1500.4",
+    "@angular-devkit/build-angular": "^15.0.4",
+    "@angular-devkit/core": "^15.0.4",
+    "@angular-devkit/schematics": "^15.0.4",
+    "@angular-eslint/builder": "^15.1.0",
+    "@angular-eslint/schematics": "^15.1.0",
+    "@angular-eslint/template-parser": "^15.1.0",
+    "@angular/cli": "^15.0.4",
+    "@angular/compiler": "^15.0.4",
+    "@angular/compiler-cli": "^15.0.4",
+    "@types/google.maps": "^3.51.0",
+    "@types/node": "^18.11.17",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "eslint": "^8.30.0",
+    "ng-packagr": "^15.0.3",
+    "prettier": "^2.8.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
