--- a/modules/barcode/package.json
+++ b/modules/barcode/package.json
@@ -10,6 +10,7 @@
     "@angular/core": ">=15.0.4",
     "@angular/forms": ">=15.0.4",
     "@capacitor-community/barcode-scanner": "^3.0.1",
+    "com-darryncampbell-cordova-plugin-intent": "~2.2.0",
     "@ionic/angular": ">=6.4.1",
     "rxjs": ">=7.8.0",
     "zone.js": ">=0.12.0"
@@ -19,6 +20,7 @@
     "@angular/core": ">=15.0.4",
     "@angular/forms": ">=15.0.4",
     "@capacitor-community/barcode-scanner": "^3.0.1",
+    "com-darryncampbell-cordova-plugin-intent": "~2.2.0",
     "@ionic/angular": ">=6.4.1",
     "rxjs": ">=7.8.0",
     "zone.js": ">=0.12.0"
