--- a/modules/agenda/package.json
+++ b/modules/agenda/package.json
@@ -7,39 +7,39 @@
     "tslib": "^2.4.1"
   },
   "peerDependencies": {
-    "@angular/animations": ">=15.0.4",
-    "@angular/common": ">=15.0.4",
-    "@angular/core": ">=15.0.4",
-    "@angular/forms": ">=15.0.4",
-    "@angular/platform-browser": ">=15.0.4",
-    "@angular/router": ">=15.0.4",
+    "@angular/animations": "^15.0.4",
+    "@angular/common": "^15.0.4",
+    "@angular/core": "^15.0.4",
+    "@angular/forms": "^15.0.4",
+    "@angular/platform-browser": "^15.0.4",
+    "@angular/router": "^15.0.4",
     "@capacitor/browser": "^4.x.x",
     "@capacitor/core": "^4.x.x",
-    "@ionic/angular": ">=6.4.1",
-    "@ionic/storage-angular": ">=3.0.6",
-    "angular-calendar": ">=0.29.0",
-    "date-fns": ">=2.29.3",
-    "idea-toolbox": ">=6.7.x",
-    "rxjs": ">=7.8.0",
-    "zone.js": ">=0.12.0"
+    "@ionic/angular": "^6.4.1",
+    "@ionic/storage-angular": "^3.0.6",
+    "angular-calendar": "^0.29.0",
+    "date-fns": "^2.29.3",
+    "idea-toolbox": "^6.7.x",
+    "rxjs": "^7.8.0",
+    "zone.js": "^0.12.0"
   },
   "devDependencies": {
-    "@angular/animations": ">=15.0.4",
-    "@angular/common": ">=15.0.4",
-    "@angular/core": ">=15.0.4",
-    "@angular/forms": ">=15.0.4",
-    "@angular/platform-browser": ">=15.0.4",
-    "@angular/router": ">=15.0.4",
+    "@angular/animations": "^15.0.4",
+    "@angular/common": "^15.0.4",
+    "@angular/core": "^15.0.4",
+    "@angular/forms": "^15.0.4",
+    "@angular/platform-browser": "^15.0.4",
+    "@angular/router": "^15.0.4",
     "@capacitor/browser": "^4.x.x",
     "@capacitor/core": "^4.x.x",
     "@idea-ionic/common": "^6.x.x",
-    "@ionic/angular": ">=6.4.1",
-    "@ionic/storage-angular": ">=3.0.6",
-    "angular-calendar": ">=0.29.0",
-    "date-fns": ">=2.29.3",
-    "idea-toolbox": ">=6.7.x",
-    "rxjs": ">=7.8.0",
-    "zone.js": ">=0.12.0"
+    "@ionic/angular": "^6.4.1",
+    "@ionic/storage-angular": "^3.0.6",
+    "angular-calendar": "^0.29.0",
+    "date-fns": "^2.29.3",
+    "idea-toolbox": "^6.7.x",
+    "rxjs": "^7.8.0",
+    "zone.js": "^0.12.0"
   },
   "repository": {
     "type": "git",
