--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -3,41 +3,41 @@
   "version": "6.12.0",
   "description": "IDEA Ionic common components",
   "dependencies": {
-    "signature_pad": ">=3.0.0-beta.4",
+    "signature_pad": "^3.0.0-beta.4",
     "tslib": "^2.4.1"
   },
   "peerDependencies": {
-    "@angular/animations": ">=15.0.4",
-    "@angular/common": ">=15.0.4",
-    "@angular/core": ">=15.0.4",
-    "@angular/forms": ">=15.0.4",
-    "@angular/platform-browser": ">=15.0.4",
-    "@angular/router": ">=15.0.4",
+    "@angular/animations": "^15.0.4",
+    "@angular/common": "^15.0.4",
+    "@angular/core": "^15.0.4",
+    "@angular/forms": "^15.0.4",
+    "@angular/platform-browser": "^15.0.4",
+    "@angular/router": "^15.0.4",
     "@capacitor/browser": "^4.x.x",
     "@capacitor/core": "^4.x.x",
     "@capacitor/network": "^4.x.x",
     "@capacitor/push-notifications": "^4.x.x",
-    "@ionic/angular": ">=6.4.1",
-    "@ionic/storage-angular": ">=3.0.6",
-    "idea-toolbox": ">=6.7.x",
-    "rxjs": ">=7.8.0",
-    "zone.js": ">=0.12.0"
+    "@ionic/angular": "^6.4.1",
+    "@ionic/storage-angular": "^3.0.6",
+    "idea-toolbox": "^6.7.x",
+    "rxjs": "^7.8.0",
+    "zone.js": "^0.12.0"
   },
   "devDependencies": {
-    "@angular/animations": ">=15.0.4",
-    "@angular/common": ">=15.0.4",
-    "@angular/core": ">=15.0.4",
-    "@angular/forms": ">=15.0.4",
-    "@angular/platform-browser": ">=15.0.4",
-    "@angular/router": ">=15.0.4",
+    "@angular/animations": "^15.0.4",
+    "@angular/common": "^15.0.4",
+    "@angular/core": "^15.0.4",
+    "@angular/forms": "^15.0.4",
+    "@angular/platform-browser": "^15.0.4",
+    "@angular/router": "^15.0.4",
     "@capacitor/browser": "^4.x.x",
     "@capacitor/network": "^4.x.x",
     "@capacitor/push-notifications": "^4.x.x",
-    "@ionic/angular": ">=6.4.1",
-    "@ionic/storage-angular": ">=3.0.6",
-    "idea-toolbox": ">=6.7.x",
-    "rxjs": ">=7.8.0",
-    "zone.js": ">=0.12.0"
+    "@ionic/angular": "^6.4.1",
+    "@ionic/storage-angular": "^3.0.6",
+    "idea-toolbox": "^6.7.x",
+    "rxjs": "^7.8.0",
+    "zone.js": "^0.12.0"
   },
   "repository": {
     "type": "git",
