--- a/modules/map/package.json
+++ b/modules/map/package.json
@@ -1,45 +1,45 @@
 {
   "name": "@idea-ionic/map",
-  "version": "6.13.0",
+  "version": "7.0.0",
   "description": "IDEA Ionic map component",
   "dependencies": {
-    "@googlemaps/js-api-loader": "^1.15.1",
+    "@googlemaps/js-api-loader": "^1.16.2",
     "@googlemaps/markerclustererplus": "^1.2.10",
     "tslib": "^2.4.1"
   },
   "peerDependencies": {
-    "@angular/common": "^15.0.4",
-    "@angular/core": "^15.0.4",
-    "@angular/forms": "^15.0.4",
-    "@angular/platform-browser": "^15.0.4",
-    "@angular/router": "^15.0.4",
-    "@capacitor/browser": "^4.x.x",
-    "@capacitor/core": "^4.x.x",
-    "@capacitor/geolocation": "^4.x.x",
-    "@capacitor/network": "^4.x.x",
-    "@ionic/angular": "^6.4.1",
-    "@ionic/storage-angular": "^3.0.6",
+    "@angular/common": "^16.1.8",
+    "@angular/core": "^16.1.8",
+    "@angular/forms": "^16.1.8",
+    "@angular/platform-browser": "^16.1.8",
+    "@angular/router": "^16.1.8",
+    "@capacitor/browser": "^5.0.6",
+    "@capacitor/core": "^5.2.2",
+    "@capacitor/geolocation": "^5.0.6",
+    "@capacitor/network": "^5.0.6",
+    "@ionic/angular": "^7.0.0",
+    "@ionic/storage-angular": "^4.0.0",
     "idea-toolbox": "^6.7.x",
     "rxjs": "^7.8.0",
-    "zone.js": "^0.12.0"
+    "zone.js": "^0.13.0"
   },
   "devDependencies": {
-    "@angular/common": "^15.0.4",
-    "@angular/core": "^15.0.4",
-    "@angular/forms": "^15.0.4",
-    "@angular/platform-browser": "^15.0.4",
-    "@angular/router": "^15.0.4",
-    "@capacitor/browser": "^4.x.x",
-    "@capacitor/core": "^4.x.x",
-    "@capacitor/geolocation": "^4.x.x",
-    "@capacitor/network": "^4.x.x",
-    "@idea-ionic/common": "^6.x.x",
-    "@ionic/angular": "^6.4.1",
-    "@ionic/storage-angular": "^3.0.6",
-    "@types/google.maps": "^3.51.0",
+    "@angular/common": "^16.1.8",
+    "@angular/core": "^16.1.8",
+    "@angular/forms": "^16.1.8",
+    "@angular/platform-browser": "^16.1.8",
+    "@angular/router": "^16.1.8",
+    "@capacitor/browser": "^5.0.6",
+    "@capacitor/core": "^5.2.2",
+    "@capacitor/geolocation": "^5.0.6",
+    "@capacitor/network": "^5.0.6",
+    "@idea-ionic/common": "^7.x.x",
+    "@ionic/angular": "^7.0.0",
+    "@ionic/storage-angular": "^4.0.0",
+    "@types/google.maps": "^3.53.6",
     "idea-toolbox": "^6.7.x",
     "rxjs": "^7.8.0",
-    "zone.js": "^0.12.0"
+    "zone.js": "^0.13.0"
   },
   "repository": {
     "type": "git",
