--- a/modules/agenda/package.json
+++ b/modules/agenda/package.json
@@ -1,45 +1,45 @@
 {
   "name": "@idea-ionic/agenda",
-  "version": "6.13.0",
+  "version": "7.0.0",
   "description": "IDEA Ionic agenda (calendar)",
   "dependencies": {
     "color-parse": "^1.4.2",
     "tslib": "^2.4.1"
   },
   "peerDependencies": {
-    "@angular/animations": "^15.0.4",
-    "@angular/common": "^15.0.4",
-    "@angular/core": "^15.0.4",
-    "@angular/forms": "^15.0.4",
-    "@angular/platform-browser": "^15.0.4",
-    "@angular/router": "^15.0.4",
-    "@capacitor/browser": "^4.x.x",
-    "@capacitor/core": "^4.x.x",
-    "@ionic/angular": "^6.4.1",
-    "@ionic/storage-angular": "^3.0.6",
+    "@angular/animations": "^16.1.8",
+    "@angular/common": "^16.1.8",
+    "@angular/core": "^16.1.8",
+    "@angular/forms": "^16.1.8",
+    "@angular/platform-browser": "^16.1.8",
+    "@angular/router": "^16.1.8",
+    "@capacitor/browser": "^5.0.6",
+    "@capacitor/core": "^5.2.2",
+    "@ionic/angular": "^7.0.0",
+    "@ionic/storage-angular": "^4.0.0",
     "angular-calendar": "^0.29.0",
-    "date-fns": "^2.29.3",
+    "date-fns": "^2.30.0",
     "idea-toolbox": "^6.7.x",
     "rxjs": "^7.8.0",
-    "zone.js": "^0.12.0"
+    "zone.js": "^0.13.0"
   },
   "devDependencies": {
-    "@angular/animations": "^15.0.4",
-    "@angular/common": "^15.0.4",
-    "@angular/core": "^15.0.4",
-    "@angular/forms": "^15.0.4",
-    "@angular/platform-browser": "^15.0.4",
-    "@angular/router": "^15.0.4",
-    "@capacitor/browser": "^4.x.x",
-    "@capacitor/core": "^4.x.x",
-    "@idea-ionic/common": "^6.x.x",
-    "@ionic/angular": "^6.4.1",
-    "@ionic/storage-angular": "^3.0.6",
+    "@angular/animations": "^16.1.8",
+    "@angular/common": "^16.1.8",
+    "@angular/core": "^16.1.8",
+    "@angular/forms": "^16.1.8",
+    "@angular/platform-browser": "^16.1.8",
+    "@angular/router": "^16.1.8",
+    "@capacitor/browser": "^5.0.6",
+    "@capacitor/core": "^5.2.2",
+    "@idea-ionic/common": "^7.x.x",
+    "@ionic/angular": "^7.0.0",
+    "@ionic/storage-angular": "^4.0.0",
     "angular-calendar": "^0.29.0",
-    "date-fns": "^2.29.3",
+    "date-fns": "^2.30.0",
     "idea-toolbox": "^6.7.x",
     "rxjs": "^7.8.0",
-    "zone.js": "^0.12.0"
+    "zone.js": "^0.13.0"
   },
   "repository": {
     "type": "git",
