--- a/modules/auth/package.json
+++ b/modules/auth/package.json
@@ -1,43 +1,43 @@
 {
   "name": "@idea-ionic/auth",
-  "version": "6.13.0",
+  "version": "7.0.0",
   "description": "IDEA Ionic auth flow",
   "dependencies": {
     "tslib": "^2.4.1"
   },
   "peerDependencies": {
-    "@angular/common": "^15.0.4",
-    "@angular/core": "^15.0.4",
-    "@angular/forms": "^15.0.4",
-    "@angular/platform-browser": "^15.0.4",
-    "@angular/router": "^15.0.4",
-    "@capacitor/browser": "^4.x.x",
-    "@capacitor/core": "^4.x.x",
-    "@ionic/angular": "^6.4.1",
-    "@ionic/storage-angular": "^3.0.6",
-    "amazon-cognito-identity-js": "^6.1.1",
+    "@angular/common": "^16.1.8",
+    "@angular/core": "^16.1.8",
+    "@angular/forms": "^16.1.8",
+    "@angular/platform-browser": "^16.1.8",
+    "@angular/router": "^16.1.8",
+    "@capacitor/browser": "^5.0.6",
+    "@capacitor/core": "^5.2.2",
+    "@ionic/angular": "^7.0.0",
+    "@ionic/storage-angular": "^4.0.0",
+    "amazon-cognito-identity-js": "^6.3.1",
     "idea-toolbox": "^6.7.x",
-    "qrcode": "^1.5.x",
+    "qrcode": "^1.5.3",
     "rxjs": "^7.8.0",
-    "zone.js": "^0.12.0"
+    "zone.js": "^0.13.0"
   },
   "devDependencies": {
-    "@angular/common": "^15.0.4",
-    "@angular/core": "^15.0.4",
-    "@angular/forms": "^15.0.4",
-    "@angular/platform-browser": "^15.0.4",
-    "@angular/router": "^15.0.4",
-    "@capacitor/browser": "^4.x.x",
-    "@capacitor/core": "^4.x.x",
-    "@idea-ionic/common": "^6.x.x",
-    "@ionic/angular": "^6.4.1",
-    "@ionic/storage-angular": "^3.0.6",
-    "@types/qrcode": "^1.5.x",
-    "amazon-cognito-identity-js": "^6.1.1",
+    "@angular/common": "^16.1.8",
+    "@angular/core": "^16.1.8",
+    "@angular/forms": "^16.1.8",
+    "@angular/platform-browser": "^16.1.8",
+    "@angular/router": "^16.1.8",
+    "@capacitor/browser": "^5.0.6",
+    "@capacitor/core": "^5.2.2",
+    "@idea-ionic/common": "^7.x.x",
+    "@ionic/angular": "^7.0.0",
+    "@ionic/storage-angular": "^4.0.0",
+    "@types/qrcode": "^1.5.1",
+    "amazon-cognito-identity-js": "^6.3.1",
     "idea-toolbox": "^6.7.x",
-    "qrcode": "^1.5.x",
+    "qrcode": "^1.5.3",
     "rxjs": "^7.8.0",
-    "zone.js": "^0.12.0"
+    "zone.js": "^0.13.0"
   },
   "repository": {
     "type": "git",
