--- a/modules/auth0/package.json
+++ b/modules/auth0/package.json
@@ -1,38 +1,38 @@
 {
   "name": "@idea-ionic/auth0",
-  "version": "6.13.0",
+  "version": "7.0.0",
   "description": "IDEA Ionic Auth0 flow",
   "dependencies": {
     "tslib": "^2.0.0"
   },
   "peerDependencies": {
-    "@angular/common": "^15.0.4",
-    "@angular/core": "^15.0.4",
-    "@angular/forms": "^15.0.4",
-    "@angular/platform-browser": "^15.0.4",
-    "@angular/router": "^15.0.4",
-    "@auth0/auth0-angular": "^1.10.x",
-    "@capacitor/browser": "^4.x.x",
-    "@capacitor/core": "^4.x.x",
-    "@ionic/angular": "^6.4.1",
+    "@angular/common": "^16.1.8",
+    "@angular/core": "^16.1.8",
+    "@angular/forms": "^16.1.8",
+    "@angular/platform-browser": "^16.1.8",
+    "@angular/router": "^16.1.8",
+    "@auth0/auth0-angular": "^2.2.1",
+    "@capacitor/browser": "^5.0.6",
+    "@capacitor/core": "^5.2.2",
+    "@ionic/angular": "^7.0.0",
     "idea-toolbox": "^6.7.x",
     "rxjs": "^7.8.0",
-    "zone.js": "^0.12.0"
+    "zone.js": "^0.13.0"
   },
   "devDependencies": {
-    "@angular/common": "^15.0.4",
-    "@angular/core": "^15.0.4",
-    "@angular/forms": "^15.0.4",
-    "@angular/platform-browser": "^15.0.4",
-    "@angular/router": "^15.0.4",
-    "@auth0/auth0-angular": "^1.11.1",
-    "@capacitor/browser": "^4.x.x",
-    "@capacitor/core": "^4.x.x",
-    "@idea-ionic/common": "^6.x.x",
-    "@ionic/angular": "^6.4.1",
+    "@angular/common": "^16.1.8",
+    "@angular/core": "^16.1.8",
+    "@angular/forms": "^16.1.8",
+    "@angular/platform-browser": "^16.1.8",
+    "@angular/router": "^16.1.8",
+    "@auth0/auth0-angular": "^2.2.1",
+    "@capacitor/browser": "^5.0.6",
+    "@capacitor/core": "^5.2.2",
+    "@idea-ionic/common": "^7.x.x",
+    "@ionic/angular": "^7.0.0",
     "idea-toolbox": "^6.7.x",
     "rxjs": "^7.8.0",
-    "zone.js": "^0.12.0"
+    "zone.js": "^0.13.0"
   },
   "repository": {
     "type": "git",
