--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -1,43 +1,44 @@
 {
   "name": "@idea-ionic/common",
-  "version": "6.13.0",
+  "version": "7.0.0",
   "description": "IDEA Ionic common components",
   "dependencies": {
-    "signature_pad": "^3.0.0-beta.4",
+    "signature_pad": "^4.1.6",
     "tslib": "^2.4.1"
   },
   "peerDependencies": {
-    "@angular/animations": "^15.0.4",
-    "@angular/common": "^15.0.4",
-    "@angular/core": "^15.0.4",
-    "@angular/forms": "^15.0.4",
-    "@angular/platform-browser": "^15.0.4",
-    "@angular/router": "^15.0.4",
-    "@capacitor/browser": "^4.x.x",
-    "@capacitor/core": "^4.x.x",
-    "@capacitor/network": "^4.x.x",
-    "@capacitor/push-notifications": "^4.x.x",
-    "@ionic/angular": "^6.4.1",
-    "@ionic/storage-angular": "^3.0.6",
+    "@angular/animations": "^16.1.8",
+    "@angular/common": "^16.1.8",
+    "@angular/core": "^16.1.8",
+    "@angular/forms": "^16.1.8",
+    "@angular/platform-browser": "^16.1.8",
+    "@angular/router": "^16.1.8",
+    "@capacitor/browser": "^5.0.6",
+    "@capacitor/core": "^5.2.2",
+    "@capacitor/network": "^5.0.6",
+    "@capacitor/push-notifications": "^5.0.6",
+    "@ionic/angular": "^7.0.0",
+    "@ionic/storage-angular": "^4.0.0",
     "idea-toolbox": "^6.7.x",
     "rxjs": "^7.8.0",
-    "zone.js": "^0.12.0"
+    "zone.js": "^0.13.0"
   },
   "devDependencies": {
-    "@angular/animations": "^15.0.4",
-    "@angular/common": "^15.0.4",
-    "@angular/core": "^15.0.4",
-    "@angular/forms": "^15.0.4",
-    "@angular/platform-browser": "^15.0.4",
-    "@angular/router": "^15.0.4",
-    "@capacitor/browser": "^4.x.x",
-    "@capacitor/network": "^4.x.x",
-    "@capacitor/push-notifications": "^4.x.x",
-    "@ionic/angular": "^6.4.1",
-    "@ionic/storage-angular": "^3.0.6",
+    "@angular/animations": "^16.1.8",
+    "@angular/common": "^16.1.8",
+    "@angular/core": "^16.1.8",
+    "@angular/forms": "^16.1.8",
+    "@angular/platform-browser": "^16.1.8",
+    "@angular/router": "^16.1.8",
+    "@capacitor/browser": "^5.0.6",
+    "@capacitor/core": "^5.2.2",
+    "@capacitor/network": "^5.0.6",
+    "@capacitor/push-notifications": "^5.0.6",
+    "@ionic/angular": "^7.0.0",
+    "@ionic/storage-angular": "^4.0.0",
     "idea-toolbox": "^6.7.x",
     "rxjs": "^7.8.0",
-    "zone.js": "^0.12.0"
+    "zone.js": "^0.13.0"
   },
   "repository": {
     "type": "git",
