--- a/modules/auth/package.json
+++ b/modules/auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@idea-ionic/auth",
-  "version": "7.0.1",
+  "version": "7.0.2",
   "description": "IDEA Ionic auth flow",
   "dependencies": {
     "tslib": "^2.4.1"
@@ -16,7 +16,7 @@
     "@ionic/angular": "^7.0.0",
     "@ionic/storage-angular": "^4.0.0",
     "amazon-cognito-identity-js": "^6.3.1",
-    "idea-toolbox": "^6.7.x",
+    "idea-toolbox": "^7.x.x",
     "qrcode": "^1.5.3",
     "rxjs": "^7.8.0",
     "zone.js": "^0.13.0"
@@ -34,7 +34,7 @@
     "@ionic/storage-angular": "^4.0.0",
     "@types/qrcode": "^1.5.1",
     "amazon-cognito-identity-js": "^6.3.1",
-    "idea-toolbox": "^6.7.x",
+    "idea-toolbox": "^7.x.x",
     "qrcode": "^1.5.3",
     "rxjs": "^7.8.0",
     "zone.js": "^0.13.0"
