--- a/modules/auth0/package.json
+++ b/modules/auth0/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@idea-ionic/auth0",
-  "version": "7.0.1",
+  "version": "7.0.2",
   "description": "IDEA Ionic Auth0 flow",
   "dependencies": {
     "tslib": "^2.0.0"
@@ -15,7 +15,7 @@
     "@capacitor/browser": "^5.0.6",
     "@capacitor/core": "^5.2.2",
     "@ionic/angular": "^7.0.0",
-    "idea-toolbox": "^6.7.x",
+    "idea-toolbox": "^7.x.x",
     "rxjs": "^7.8.0",
     "zone.js": "^0.13.0"
   },
@@ -30,7 +30,7 @@
     "@capacitor/core": "^5.2.2",
     "@idea-ionic/common": "^7.x.x",
     "@ionic/angular": "^7.0.0",
-    "idea-toolbox": "^6.7.x",
+    "idea-toolbox": "^7.x.x",
     "rxjs": "^7.8.0",
     "zone.js": "^0.13.0"
   },
