--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "idea-ionic-extra",
-  "version": "7.1.4",
+  "version": "7.1.5",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -10,29 +10,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^16.1.8",
-    "@angular/core": "^16.1.8",
-    "zone.js": "^0.13.0"
+    "@angular/common": "^17.0.2",
+    "@angular/core": "^17.0.2",
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.5",
-    "@angular-devkit/core": "^16.1.8",
-    "@angular-devkit/schematics": "^16.1.8",
-    "@angular-eslint/builder": "^16.1.0",
-    "@angular-eslint/eslint-plugin": "^16.1.0",
-    "@angular-eslint/eslint-plugin-template": "^16.1.0",
-    "@angular-eslint/schematics": "^16.1.0",
-    "@angular-eslint/template-parser": "^16.1.0",
-    "@angular/cli": "^16.1.8",
-    "@angular/compiler": "^16.1.8",
-    "@angular/compiler-cli": "^16.1.8",
+    "@angular-devkit/build-angular": "^17.0.0",
+    "@angular-devkit/core": "^17.1.0",
+    "@angular-devkit/schematics": "^17.1.0",
+    "@angular-eslint/builder": "^17.0.0",
+    "@angular-eslint/eslint-plugin": "^17.0.0",
+    "@angular-eslint/eslint-plugin-template": "^17.0.0",
+    "@angular-eslint/schematics": "^17.0.0",
+    "@angular-eslint/template-parser": "^17.0.0",
+    "@angular/cli": "^17.0.0",
+    "@angular/compiler": "^17.0.2",
+    "@angular/compiler-cli": "^17.0.2",
     "@types/google.maps": "^3.53.6",
-    "@types/node": "^18.11.17",
-    "@typescript-eslint/eslint-plugin": "^5.47.0",
-    "@typescript-eslint/parser": "^5.47.0",
+    "@types/node": "^16.18.40",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.46.0",
-    "ng-packagr": "^16.2.0",
-    "prettier": "^2.8.1",
+    "ng-packagr": "^17.1.0",
+    "prettier": "^3.2.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
