--- a/modules/agenda/package.json
+++ b/modules/agenda/package.json
@@ -1,45 +1,47 @@
 {
   "name": "@idea-ionic/agenda",
-  "version": "7.1.4",
+  "version": "7.1.5",
   "description": "IDEA Ionic agenda (calendar)",
   "dependencies": {
-    "color-parse": "^1.4.2",
+    "color-parse": "^2.0.0",
     "tslib": "^2.4.1"
   },
   "peerDependencies": {
-    "@angular/animations": "^16.1.8",
-    "@angular/common": "^16.1.8",
-    "@angular/core": "^16.1.8",
-    "@angular/forms": "^16.1.8",
-    "@angular/platform-browser": "^16.1.8",
-    "@angular/router": "^16.1.8",
-    "@capacitor/browser": "^5.0.6",
-    "@capacitor/core": "^5.2.2",
-    "@ionic/angular": "^7.0.0",
+    "@angular/animations": "^17.0.2",
+    "@angular/common": "^17.0.2",
+    "@angular/core": "^17.0.2",
+    "@angular/forms": "^17.0.2",
+    "@angular/platform-browser": "^17.0.2",
+    "@angular/platform-browser-dynamic": "^17.0.2",
+    "@angular/router": "^17.0.2",
+    "@capacitor/browser": "^5.1.0",
+    "@capacitor/core": "^5.6.0",
+    "@ionic/angular": "^7.5.0",
     "@ionic/storage-angular": "^4.0.0",
-    "angular-calendar": "^0.29.0",
-    "date-fns": "^2.30.0",
+    "angular-calendar": "^0.31.0",
+    "date-fns": "^3.2.0",
     "idea-toolbox": "^7.x.x",
-    "rxjs": "^7.8.0",
-    "zone.js": "^0.13.0"
+    "rxjs": "~7.8.0",
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular/animations": "^16.1.8",
-    "@angular/common": "^16.1.8",
-    "@angular/core": "^16.1.8",
-    "@angular/forms": "^16.1.8",
-    "@angular/platform-browser": "^16.1.8",
-    "@angular/router": "^16.1.8",
-    "@capacitor/browser": "^5.0.6",
-    "@capacitor/core": "^5.2.2",
+    "@angular/animations": "^17.0.2",
+    "@angular/common": "^17.0.2",
+    "@angular/core": "^17.0.2",
+    "@angular/forms": "^17.0.2",
+    "@angular/platform-browser": "^17.0.2",
+    "@angular/platform-browser-dynamic": "^17.0.2",
+    "@angular/router": "^17.0.2",
+    "@capacitor/browser": "^5.1.0",
+    "@capacitor/core": "^5.6.0",
     "@idea-ionic/common": "^7.x.x",
-    "@ionic/angular": "^7.0.0",
+    "@ionic/angular": "^7.5.0",
     "@ionic/storage-angular": "^4.0.0",
-    "angular-calendar": "^0.29.0",
-    "date-fns": "^2.30.0",
+    "angular-calendar": "^0.31.0",
+    "date-fns": "^3.2.0",
     "idea-toolbox": "^7.x.x",
-    "rxjs": "^7.8.0",
-    "zone.js": "^0.13.0"
+    "rxjs": "~7.8.0",
+    "zone.js": "~0.14.2"
   },
   "repository": {
     "type": "git",
