--- a/modules/map/package.json
+++ b/modules/map/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@idea-ionic/map",
-  "version": "7.1.4",
+  "version": "7.1.5",
   "description": "IDEA Ionic map component",
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.2",
@@ -8,38 +8,40 @@
     "tslib": "^2.4.1"
   },
   "peerDependencies": {
-    "@angular/common": "^16.1.8",
-    "@angular/core": "^16.1.8",
-    "@angular/forms": "^16.1.8",
-    "@angular/platform-browser": "^16.1.8",
-    "@angular/router": "^16.1.8",
-    "@capacitor/browser": "^5.0.6",
-    "@capacitor/core": "^5.2.2",
+    "@angular/common": "^17.0.2",
+    "@angular/core": "^17.0.2",
+    "@angular/forms": "^17.0.2",
+    "@angular/platform-browser": "^17.0.2",
+    "@angular/platform-browser-dynamic": "^17.0.2",
+    "@angular/router": "^17.0.2",
+    "@capacitor/browser": "^5.1.0",
+    "@capacitor/core": "^5.6.0",
     "@capacitor/geolocation": "^5.0.6",
     "@capacitor/network": "^5.0.6",
-    "@ionic/angular": "^7.0.0",
+    "@ionic/angular": "^7.5.0",
     "@ionic/storage-angular": "^4.0.0",
     "idea-toolbox": "^7.x.x",
-    "rxjs": "^7.8.0",
-    "zone.js": "^0.13.0"
+    "rxjs": "~7.8.0",
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular/common": "^16.1.8",
-    "@angular/core": "^16.1.8",
-    "@angular/forms": "^16.1.8",
-    "@angular/platform-browser": "^16.1.8",
-    "@angular/router": "^16.1.8",
-    "@capacitor/browser": "^5.0.6",
-    "@capacitor/core": "^5.2.2",
+    "@angular/common": "^17.0.2",
+    "@angular/core": "^17.0.2",
+    "@angular/forms": "^17.0.2",
+    "@angular/platform-browser": "^17.0.2",
+    "@angular/platform-browser-dynamic": "^17.0.2",
+    "@angular/router": "^17.0.2",
+    "@capacitor/browser": "^5.1.0",
+    "@capacitor/core": "^5.6.0",
     "@capacitor/geolocation": "^5.0.6",
     "@capacitor/network": "^5.0.6",
     "@idea-ionic/common": "^7.x.x",
-    "@ionic/angular": "^7.0.0",
+    "@ionic/angular": "^7.5.0",
     "@ionic/storage-angular": "^4.0.0",
     "@types/google.maps": "^3.53.6",
     "idea-toolbox": "^7.x.x",
-    "rxjs": "^7.8.0",
-    "zone.js": "^0.13.0"
+    "rxjs": "~7.8.0",
+    "zone.js": "~0.14.2"
   },
   "repository": {
     "type": "git",
