--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "importHelpers": true,
     "target": "es2022",
     "module": "es2020",
-    "lib": ["es2018", "dom"],
+    "lib": ["es2018", "dom", "es2020.Intl"],
     "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
