fix(auth): amazon-cognito-identity-js types

--- a/modules/auth/tsconfig.lib.json
+++ b/modules/auth/tsconfig.lib.json
@@ -5,7 +5,7 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": [],
+    "types": ["amazon-cognito-identity-js"],
     "paths": {
       "@env": ["modules/auth/environment.ts"]
     }
