chore: change env path to support esbuild on angular 17

--- a/modules/auth/tsconfig.lib.json
+++ b/modules/auth/tsconfig.lib.json
@@ -7,7 +7,7 @@
     "inlineSources": true,
     "types": ["amazon-cognito-identity-js"],
     "paths": {
-      "@env": ["modules/auth/environment.ts"]
+      "@env/*": ["modules/auth/*"]
     }
   }
 }
