--- a/modules/agenda/tsconfig.lib.json
+++ b/modules/agenda/tsconfig.lib.json
@@ -7,7 +7,7 @@
     "inlineSources": true,
     "types": [],
     "paths": {
-      "@env": ["modules/agenda/environment.ts"]
+      "@env/*": ["modules/agenda/*"]
     }
   }
 }
