--- a/modules/auth0/tsconfig.lib.json
+++ b/modules/auth0/tsconfig.lib.json
@@ -7,7 +7,7 @@
     "inlineSources": true,
     "types": [],
     "paths": {
-      "@env": ["modules/auth0/environment.ts"]
+      "@env/*": ["modules/auth0/*"]
     }
   }
 }
