--- a/modules/barcode/tsconfig.lib.json
+++ b/modules/barcode/tsconfig.lib.json
@@ -7,7 +7,7 @@
     "inlineSources": true,
     "types": [],
     "paths": {
-      "@env": ["modules/barcode/environment.ts"]
+      "@env/*": ["modules/barcode/*"]
     }
   }
 }
