--- a/modules/common/tsconfig.lib.json
+++ b/modules/common/tsconfig.lib.json
@@ -7,7 +7,7 @@
     "inlineSources": true,
     "types": [],
     "paths": {
-      "@env": ["modules/common/environment.ts"]
+      "@env/*": ["modules/common/*"]
     }
   }
 }
