--- a/modules/map/tsconfig.lib.json
+++ b/modules/map/tsconfig.lib.json
@@ -7,7 +7,7 @@
     "inlineSources": true,
     "types": [],
     "paths": {
-      "@env": ["modules/map/environment.ts"]
+      "@env/*": ["modules/map/*"]
     }
   }
 }
