--- a/modules/teams/tsconfig.lib.json
+++ b/modules/teams/tsconfig.lib.json
@@ -7,7 +7,7 @@
     "inlineSources": true,
     "types": [],
     "paths": {
-      "@env": ["modules/teams/environment.ts"]
+      "@env/*": ["modules/teams/*"]
     }
   }
 }
