--- a/angular.json
+++ b/angular.json
@@ -255,5 +255,8 @@
     "@angular-eslint/schematics:library": {
       "setParserOptionsProject": true
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
